@@ -33,4 +33,25 @@ public interface ISharedObject extends IBasicScope,
 
 	public static final String TYPE = "SharedObject";
 
+	/**
+	 * Prevent shared object from being released. Each call to <code>acquire</code>
+	 * must be paired with a call to <code>release</code> so the SO isn't held
+	 * forever. This is only valid for non-persistent SOs.
+	 */
+	public void acquire();
+	
+	/**
+	 * Check if shared object currently is acquired.
+	 * 
+	 * @return <code>true</code> if the SO is acquired, otherwise <code>false</code>
+	 */
+	public boolean isAcquired();
+	
+	/**
+	 * Release previously acquired shared object. If the SO is non-persistent,
+	 * no more clients are connected the SO isn't acquired any more, the data
+	 * is released. 
+	 */
+	public void release();
+	
 }
